--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,33 @@ nav{
     margin: 1rem auto;
     background-color: green;
 }
+
+footer{
+    background-color: black;
+}
+
+.fine{
+    background-color: pink;
+    height: 15rem;
+    width: 20%;
+    margin: 1rem 0;
+}
+
+.lista{
+    background-color: lightblue;
+    width: 10%;
+    height: 15rem;
+    margin: 1rem 0;
+}
+
+.finale{
+    display: flex;
+    justify-content: center;
+}
+
+.altro-nav{
+    border: 2px solid black;
+    background-color: lightcoral;
+    width: 70%;
+    margin: 1rem auto 0;
+}
