--- a/css/style.css
+++ b/css/style.css
@@ -5,25 +5,66 @@
 }
 
 header{
-    background-color: blue;
-    height: 25vh;
-    padding-top: 1rem;
+    background-image: url(../img/jumbo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 38rem;
+    padding-top: 2rem;
+    color: white;
 }
 
 nav{
-    border: 2px solid black;
-    background-color: lightcoral;
+    
     width: 70%;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.accedi{
+    border-radius: 30%;
+    padding: 0.6rem;
+    border: none;
+}
+
+a{
+    text-decoration: none;
+    justify-content: center;
+    margin-right: 2rem;
+    color: white;
 }
 
 .paragrafo{
-    background-color: pink;
     height: 8rem;
     width: 55%;
-    margin: 2rem auto;
+    margin: 6rem auto;
+    text-align: center;
 
 }
+
+h1{
+    font-size: 3rem;
+    margin-bottom: 3rem;
+}
+p{
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+}
+
+.scarica{
+    padding: 1rem 1.5rem; 
+    color: black;
+    border-radius: 25%;
+    margin-right: 1.5rem;
+}
+.apri-browser{
+    padding: 1rem 1.5rem;
+    background-color: black;
+    color: white;
+    border-radius: 25%;
+}
+
+
 
 .contenuto{
     display: flex;
