--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,8 @@ a{
 }
 
 .accedi{
-    border-radius: 30%;
+
+    border-radius: 50px;
     padding: 0.6rem;
     border: none;
 }
@@ -57,15 +58,18 @@ h1{
 
 .scarica{
     padding: 1rem 1.5rem; 
+    background-color: white;
     color: black;
-    border-radius: 25%;
+    border-radius: 25px;
     margin-right: 1.5rem;
+    border: none;
 }
+
 .apri-browser{
     padding: 1rem 1.5rem;
     background-color: black;
     color: white;
-    border-radius: 25%;
+    border-radius: 25px;
 }
 
 
@@ -125,12 +129,13 @@ h1{
     padding-top: 1rem;
 }
 
-.scarica{
+.scarica2{
     color: white;
-    border-radius: 30%;
+    border-radius: 25px;
     padding: 1rem;
-    background-color: lightblue;
+    background-color: #8ea1e1;
     margin-bottom: 2rem;
+    border: none;
 }
 
 
@@ -154,31 +159,68 @@ h1{
 
 
 footer{
-    background-color: black;
+    background-color: #23272a;
 }
 
 .fine{
-    background-color: pink;
-    height: 15rem;
     width: 20%;
     margin: 1rem 0;
 }
 
-.lista{
-    background-color: lightblue;
+h4{
+    color: #8ea1e1;
+    margin-top: 2rem;
+    font-size: 2rem;
+}
+.foto-finale{
     width: 10%;
-    height: 15rem;
-    margin: 1rem 0;
+    margin-top: 1rem;
+}
+span{
+    color: white;
 }
 
 .finale{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    width: 70%;
+    margin: 0 auto;
 }
 
 .altro-nav{
-    border: 2px solid black;
-    background-color: lightcoral;
+   
+    display: flex;
     width: 70%;
     margin: 1rem auto 0;
+    justify-content: space-between;
+    padding: 2rem 0;
+    border-top: black 1px solid;
+}
+
+.registrati{
+    border-radius: 25px;
+    border: none;
+    padding: 1rem;
+    color: white;
+    background-color: #8ea1e1;
+}
+
+
+
+
+.lista{
+    margin: 1rem 0;
+}
+
+ul{
+    color: white;
+    list-style-type: none;
+    margin-top: 2rem;
+}
+
+li{
+    margin: 0.5rem;
+}
+.primo-lista{
+    color: #8ea1e1;
 }
