--- a/css/style.css
+++ b/css/style.css
@@ -103,20 +103,22 @@ h1{
     margin-bottom: 1.5rem;
 }
 
-
+.titoletto2 {
+    padding-top: 1.5rem;
+}
 
 .contenuto2 {
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
-    background-color: lightgray;
+    background-color: #f6f6f6;
 }
 
 
 .ultima-parte{
-    width: 70%;
-    margin: 1rem auto; 
+    margin: 0 auto; 
     text-align: center;
+    background-color: #f6f6f6;
 }
 
 .titolo-speciale{
@@ -134,8 +136,9 @@ h1{
     border-radius: 25px;
     padding: 1rem;
     background-color: #8ea1e1;
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
     border: none;
+
 }
 
 
