--- a/css/style.css
+++ b/css/style.css
@@ -1,127 +1,137 @@
+
+/* reset */
+
 *{
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
+/* fine reset */
+
+body{
+    
+    font-family: sans-serif;
+
+}
+
+/* inizio header */
+
 header{
+    
     background-image: url(../img/jumbo.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 38rem;
     padding-top: 2rem;
     color: white;
-}
 
-body{
-    font-family: sans-serif;
 }
 
 nav{ 
+    
     width: 70%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+
 }
 
 a{
+
     text-decoration: none;
     justify-content: center;
     margin-right: 2rem;
     color: white;
+
 }
-
-.accedi{
-
-    border-radius: 50px;
-    padding: 0.6rem;
-    border: none;
-}
-
 
 .paragrafo{
+
     height: 8rem;
     width: 55%;
     margin: 6rem auto;
     text-align: center;
+
 }
 
 h1{
+
     font-size: 3rem;
     margin-bottom: 3rem;
+
 }
 
 .frase-header{
+
     font-size: 1.5rem;
     margin-bottom: 3rem;
+
 }
 
-.scarica{
-    padding: 1rem 1.5rem; 
-    background-color: white;
-    color: black;
-    border-radius: 25px;
-    margin-right: 1.5rem;
-    border: none;
-}
-
-.apri-browser{
-    padding: 1rem 1.5rem;
-    background-color: black;
-    color: white;
-    border-radius: 25px;
-}
+/* fine header */
 
 
-
-
-
+/* inizo main */
 
 .contenuto{
-
+    
     display: flex;
+
 }
 
-.img{
-
+.immagine{
+    
     margin: 1rem 0;
     width: 50%;
     text-align: end;
+
 }
 
-
 .frase {
+
     display: flex;
     justify-content: center;
     flex-direction: column;
     width: 15%;
     font-size: 1.4rem;
     margin-left: 7rem;
+
 }
 
 .titoletto{
+
     margin-bottom: 1.5rem;
+
 }
 
 .titoletto2 {
+
     padding-top: 1.5rem;
+
 }
 
 .contenuto2 {
+
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
     background-color: #f6f6f6;
+
 }
 
-
 .ultima-parte{
+
     margin: 0 auto; 
     text-align: center;
     background-color: #f6f6f6;
+
 }
 
 .titolo-speciale{
+
     background-image: url(../img/stars.svg);
     background-position: center;
     width: 50%;
@@ -129,69 +139,116 @@ h1{
     margin: 1.5rem auto;
     font-size: 1.5rem;
     padding-top: 1rem;
+
 }
 
-.scarica2{
-    color: white;
+/* bottoni */
+
+.bottone{
+
     border-radius: 25px;
-    padding: 1rem;
-    background-color: #8ea1e1;
-    margin-bottom: 5rem;
+    padding: 1rem 1.5rem;
     border: none;
 
 }
 
+.scarica2 {
+    
+    color: white;
+    background-color: #8ea1e1;
+    margin-bottom: 5rem;
 
+}
 
+.scarica {
+    
+    background-color: white;
+    color: black;
+    margin-right: 1.5rem;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-footer{
+.apri-browser {
+    
     background-color: #23272a;
-}
-
-.fine{
-    width: 20%;
-    margin: 1rem 0;
-}
-
-h4{
-    color: #8ea1e1;
-    margin-top: 2rem;
-    font-size: 2rem;
-}
-.foto-finale{
-    width: 10%;
-    margin-top: 1rem;
-}
-span{
     color: white;
 }
 
+.registrati {
+    
+    color: white;
+    background-color: #8ea1e1;
+}
+
+/* fine bottoni */
+
+/* fine main */
+
+/* inizio footer */
+
+footer{
+
+    background-color: #23272a;
+    color: white;
+
+}
+
+.fine{
+
+    width: 20%;
+    margin: 1rem 0;
+
+}
+
+h4{
+
+    margin-top: 2rem;
+    font-size: 2rem;
+
+}
+
+.foto-finale{
+
+    width: 10%;
+    margin-top: 1rem;
+
+}
+
+
 .finale{
+
     display: flex;
     justify-content: space-between;
     width: 70%;
     margin: 0 auto;
+
+}
+
+.lista{
+
+    margin: 1rem 0;
+
+}
+
+ul{
+
+    list-style-type: none;
+    margin-top: 2rem;
+
+}
+
+li{
+
+    margin: 0.5rem;
+
+}
+
+.colore-scritte{
+
+    color: #8ea1e1;
 }
 
 .altro-nav{
-   
+
     display: flex;
     width: 70%;
     margin: 1rem auto 0;
@@ -200,30 +257,4 @@ span{
     border-top: black 1px solid;
 }
 
-.registrati{
-    border-radius: 25px;
-    border: none;
-    padding: 1rem;
-    color: white;
-    background-color: #8ea1e1;
-}
-
-
-
-
-.lista{
-    margin: 1rem 0;
-}
-
-ul{
-    color: white;
-    list-style-type: none;
-    margin-top: 2rem;
-}
-
-li{
-    margin: 0.5rem;
-}
-.primo-lista{
-    color: #8ea1e1;
-}
+/* fine footer */
